--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   ],
   "main": "dist/geofire.js",
   "dependencies": {
+    "gulp": "3.9.0"
   },
   "peerDependencies": {
     "firebase": "^2.4.0 || 3.x.x"
   },
   "devDependencies": {
     "coveralls": "2.11.4",
-    "gulp": "3.9.0",
     "gulp-concat": "2.6.0",
     "gulp-ext-replace": "0.2.0",
     "gulp-jshint": "1.11.2",
